--- a/BucStop/Views/Home/Admin.cshtml
+++ b/BucStop/Views/Home/Admin.cshtml
@@ -9,7 +9,7 @@
     <table>
         <tr>
             <td>Admin action 1</td>
-            <td>Admin action 2</td>
+            <td>Sydnie Dery</td>
             <td>Admin action 3</td>
             <td>Admin action 4</td>
         </tr>
