--- a/BucStop/Views/Home/Admin.cshtml
+++ b/BucStop/Views/Home/Admin.cshtml
@@ -10,7 +10,7 @@
         <tr>
             <td>Admin action 1</td>
             <td>Admin action 2</td>
-            <td>Admin action 3</td>
+            <td>Thomas Justice</td>
             <td>Admin action 4</td>
         </tr>
 
