ADDED NAME TO ADMIN PAGE

--- a/BucStop/Views/Home/Admin.cshtml
+++ b/BucStop/Views/Home/Admin.cshtml
@@ -12,6 +12,7 @@
             <td>Admin action 2</td>
             <td>Admin action 3</td>
             <td>Admin action 4</td>
+            <td>Logan Turbyfill</td>
         </tr>
 
     </table>
