Added name to admin page

--- a/BucStop/Views/Home/Admin.cshtml
+++ b/BucStop/Views/Home/Admin.cshtml
@@ -11,7 +11,7 @@
             <td>Admin action 1</td>
             <td>Admin action 2</td>
             <td>Admin action 3</td>
-            <td>Admin action 4</td>
+            <td>Shealy Cohan</td>
         </tr>
 
     </table>
