Adding name to admin page

--- a/BucStop/Views/Home/Admin.cshtml
+++ b/BucStop/Views/Home/Admin.cshtml
@@ -13,6 +13,7 @@
             <td>Admin action 4</td>
             <td>Logan Turbyfill</td>
             <td>Shealy Cohan</td>
+            <td>Jivan Taj</td>
         </tr>
 
     </table>
