Added Name for D1 - Benjamin Merritt

--- a/BucStop/Views/Home/Admin.cshtml
+++ b/BucStop/Views/Home/Admin.cshtml
@@ -8,6 +8,7 @@
     <h1 class="display-4">Welcome</h1>
     <table>
         <tr>
+            <td>Benjamin Merritt</td>
             <td>Sydnie Dery</td>
             <td>Thomas Justice</td>
             <td>Admin action 4</td>
