--- a/BucStop/Views/Games/Tetris.cshtml
+++ b/BucStop/Views/Games/Tetris.cshtml
@@ -62,6 +62,8 @@ function getNextTetromino() {
     matrix: matrix,  // the current rotation matrix
     row: row,        // current row (starts offscreen)
     col: col         // current col
+
+    //test comment
   };
 }
 
