--- a/BucStop/Views/Games/Play.cshtml
+++ b/BucStop/Views/Games/Play.cshtml
@@ -29,6 +29,8 @@
                         }
                         else if (Model.Title == "Tetris")
                         {
+                            // create a play again button
+                            <button id="play-again" class="btn btn-primary">Play Again</button>
                             <canvas width="320" height="640" id="game" style="border: 1px solid #000000; background-color: gray"></canvas>
                         }
                         else if (Model.Title == "Pong")
