Updated the styling and functionality of the play again button.

--- a/BucStop/Views/Games/Play.cshtml
+++ b/BucStop/Views/Games/Play.cshtml
@@ -30,8 +30,9 @@
                         else if (Model.Title == "Tetris")
                         {
                             // create a play again button
-                            <button id="play-again" class="btn btn-primary">Play Again</button>
                             <canvas width="320" height="640" id="game" style="border: 1px solid #000000; background-color: gray"></canvas>
+                            <button id="play-again" class="btn btn-primary center-button" onclick="location.reload()">Play Again</button>
+                            
                         }
                         else if (Model.Title == "Pong")
                         {
