Added Restart Button to bottom of Tetris page.

--- a/BucStop/Views/Games/Play.cshtml
+++ b/BucStop/Views/Games/Play.cshtml
@@ -31,8 +31,12 @@
                         {
                             // create a play again button
                             <canvas width="320" height="640" id="game" style="border: 1px solid #000000; background-color: gray"></canvas>
-                            <button id="play-again" class="btn btn-primary center-button" onclick="location.reload()">Play Again</button>
-                            
+                            //Retart Game Button just in case
+                            <button id="restart-game" class="btn btn-primary center-button" onclick="location.reload()">Restart Game</button>
+
+                            //javascript button attempt
+                            //<button id="play-again" class="btn btn-primary center-button" onclick="location.reload()" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Play Again</button>
+
                         }
                         else if (Model.Title == "Pong")
                         {
