Finished connecting Tetris javascript file to GamesController.cs. Added Content field to GameInfo.cs. Added the correct script to display game content (.js) in Play.cshtml.

--- a/BucStop/Views/Games/Play.cshtml
+++ b/BucStop/Views/Games/Play.cshtml
@@ -48,7 +48,14 @@
                         }
 
                         <!-- Embed the game's Javascript here -->
+                        @if (Model.Id == 2)
+                        {
+                            <script type="text/javascript">@Html.Raw(Model.Content)</script>
+                        }
+                        else
+                        {
                             <script src="@Url.Content(Model.Content)"></script>
+                        }
                     </div>
                 </div>
             </div>
