--- a/BucStop/wwwroot/css/site.css
+++ b/BucStop/wwwroot/css/site.css
@@ -19,7 +19,24 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+/*for the leaderboard*/
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 2px solid #000; /* Add border to the table */
+    color: white; /* Set text color to white */
+}
 
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+/*end of leaderboard*/
 @font-face {
     font-family: "Bebas Neue";
     src: url(/fonts/BebasNeue-Regular.ttf) format("truetype");
